Projeto React Calculadora

--- a/projeto-calculadora/src/main/Calculator.css
+++ b/projeto-calculadora/src/main/Calculator.css
@@ -3,5 +3,7 @@
     width: 235px;
     border-radius: 5px;
     overflow: hidden;
-    background-color: #f00;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: 48px 48px 48px 48px 48px; 
 }
