--- a/projeto-calculadora/src/main/Calculator.css
+++ b/projeto-calculadora/src/main/Calculator.css
@@ -5,5 +5,5 @@
     overflow: hidden;
     display: grid;
     grid-template-columns: repeat(4, 25%);
-    grid-template-rows: 48px 48px 48px 48px 48px; 
+    grid-template-rows: 1fr 48px 48px 48px 48px 48px; 
 }
