--- a/redux-project/src/App.css
+++ b/redux-project/src/App.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    align-items: center;
+    align-items: stretch;
 }
 
 h1{
