--- a/navegacao/src/components/layout/Menu.css
+++ b/navegacao/src/components/layout/Menu.css
@@ -1,3 +1,31 @@
 .Menu{
-    
+    display: flex;
+    flex-basis: 250px;
+    background-color: #1e90ff;
+}
+
+.Menu nav {
+    flex: 1;
+}
+
+.Menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.Menu li {
+    display: flex;
+}
+
+.Menu li a {
+    flex: 1;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+.Menu li a:hover {
+    background-color: rgba(0, 0, 0, 0.3);
 }
